--- a/test_doc.Rmd
+++ b/test_doc.Rmd
@@ -2,31 +2,38 @@
 title: "test_doc"
 output: html_document
 ---
-```{r universeskip}
+### Loading required libraries
+First, we'll load all required libraries
+
+```{r libraries, results='hide', message=FALSE, warning=FALSE}
+library(HGNChelper)
+library(openxlsx)
+library(expss)
+library(ggpubr)
+library(dplyr)
+library(scales)
+
+```
+
+```{r universeskip,include=FALSE}
 load("output/Data/universe_df.rda")
 ```
 
-### Genetic Constraint THMs (Figure One)
+### Initialising data frame of all protein-coding genes
 
+Next, we'll initialise our data frame of all protein-coding genes, universe_df, which we'll be using throughout the project. 
 
-```{r plot_fun}
-library(ggplot2)
-library(ggpubr)
-library(scales)
-(library(dplyr))
-blank_theme <- function() {
-  theme_minimal(base_size=12,base_family="Helvetica") %+replace%
-    theme(
-      axis.title.x = element_blank(),
-      axis.title.y = element_blank(),
-      axis.text = element_blank(),
-      panel.border = element_blank(),
-      panel.grid=element_blank(),
-      axis.ticks = element_blank(),
-      plot.title=element_text(size=12, face="bold"),
-      legend.title=element_blank()
-    )
-}
+To do this, we'll load in HGNC's spreadsheet of protein-coding genes, downloaded from [their website](https://www.genenames.org/cgi-bin/statistics), updating gene symbols using, and taking only the columns we want. 
+
+```{r universe_init, eval = FALSE}
+#read protein-coding gene list
+hgnc<- read.csv("Gene_lists/Universe/gene_with_protein_product.txt",sep = "\t", comment.char = "#",stringsAsFactors = FALSE)
+
+#take only needed columns
+hgnc$symbol<- checkGeneSymbols(hgnc$symbol)[[3]]
+universe_df <- data.frame(hgnc$hgnc_id,hgnc$symbol,hgnc$name,hgnc$gene_family,hgnc$location,hgnc$mgd_id)
+names(universe_df) <- c("hgnc_id","gene","gene_name","gene_family","location","mgd_id")
+rm(hgnc)
 
 ```
 
